--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express-group-routes": "^1.1.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.6"
+    "mongoose": "^6.4.6",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
